--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
+  <title>
+    Кредитный калькулятор онлайн — рассчитать проценты и ежемесячный платеж, расчёт потребительского кредита
+  </title>
 </head>
 
 <body>
